fix arrow styles on mobile

--- a/src/Components/Projects/index.scss
+++ b/src/Components/Projects/index.scss
@@ -18,10 +18,6 @@ $nav-arrow-spacing: .3rem;
       top: 15rem;
     }
 
-    .icon-arrow-up:before {
-      margin-left: 0;
-    }
-
     button {
       background: $color-secondary;
       border-radius: 50%;
@@ -30,9 +26,15 @@ $nav-arrow-spacing: .3rem;
       height: 100%;
       width: 100%;
 
-       &:focus {
-         outline: 0;
-       }
+      &,
+      &:before {
+        padding: 0;
+        margin: 0;
+      }
+
+      &:focus {
+        outline: 0;
+      }
     }
 
     &:hover {
